--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
+# DEV environment
+
 spring.datasource.url=jdbc:mysql://localhost:3306/portfolio?useSSL=false&serverTimezone=UTC
 spring.datasource.username=xen0mrefne
 spring.datasource.password=maxius
+
+# Production environment
+
+#spring.datasource.url=jdbc:mysql://brkp7bq6xd52fkswlahk-mysql.services.clever-cloud.com
+#spring.datasource.username=uhm9rzsh3vakt7dy
+#spring.datasource.password=y6InmkBvdg10QJUTMJL0
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
